fixing stretched image

--- a/_sass/pages/_resourcepage.scss
+++ b/_sass/pages/_resourcepage.scss
@@ -15,7 +15,7 @@
 	top: 0;
 	#logo {
 		width: 15em;
-		height: auto;
+		height: 7.5em;
 		padding: 1em 0;
 		content:url(../images/logo/flipandlogo.png);
 	}
@@ -64,6 +64,7 @@
 		top: 0;
 		#logo {
 			width: 7em;
+			height: 3.7em;;
 			padding: 0.5em 0;
 			content:url(../images/logo/logo.png);
 		}
